2005-04-12  Dan Winship  <danw@novell.com>

	* configure.in: Remove the various gethostbyname_r checks and just
	check for getnameinfo/getaddrinfo.

	* libsoup/soup-dns.c: de-nastify. Make this use threads instead of
	forking. Change the API around a bunch in the process.

	* libsoup/soup-address.c: Update for soup-dns changes

	* tests/dns.c: take multiple hostnames on the command line and
	resolve them all at once (patch from tml)

2005-04-11  Dan Winship  <danw@novell.com>

	* configure.in: require glib-2.0 >= 2.4.0

	* libsoup/*.c: use G_DEFINE_TYPE and
	g_type_class_add_private/G_TYPE_INSTANCE_GET_PRIVATE

	* libsoup/soup-types.h: kill SOUP_MAKE_TYPE and
	SOUP_MAKE_TYPE_WITH_IFACE

	* tests/revserver.c: use GThread. (patch from tml)

2005-04-11  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.3.0. bump SOUP_API_VERSION to
	2.4

	* libsoup.pc.in: rename from libsoup-2.2.pc.in

	* Makefile.am (EXTRA_DIST, pkgconfig_DATA, install-data-local):
	install the .pc file by hand, renaming it to include the
	SOUP_API_VERSION

	* libsoup/Makefile.am: s/2.2/2.4/

2005-03-09  Dan Winship  <danw@novell.com>

	* libsoup/soup-gnutls.c (soup_gnutls_read): return G_IO_STATUS_EOF
	if gnutls returns 0. [#73352]
	(verify_certificate): put an #ifdef around
	GNUTLS_CERT_NOT_TRUSTED so it works with gnutls 1.2.x. [#57811]

2005-01-08  Not Zed  <NotZed@Ximian.com>

	** See ximian bug #70323.

	* libsoup/soup-connection-ntlm.c: replace all unsigned long/long
	types with guint32, as the code needs 32 bit longs.

2004-10-20  Dan Winship  <danw@novell.com>

	* libsoup/soup-gnutls.c: Commit the alleged changes from the 10-06
	commit, which somehow did not actually get committed then.

	* libsoup/soup-connection.c (SoupConnectionPrivate): add a flag
	indicating whether or not the connection is connected.
	(tunnel_connect_finished): If successful, set connected. If the
	server returns a 3xx response, translate it to 407 (under the